# prettygood

./: .Rhistory  .gitignore  Book1.ods  build_predict.py  ew-big.yaml  ew.yaml  ewpipeline-ladder.py  ewpipeline-recreatebest.py  ewpipeline.py  models.py  predictors.py  pyproject.toml  quickewighted.py  shappct.py  todo.txt  unpack.py
data/: bitw.csv  btcusd.csv  derivs_onchain-long.csv  derivs_onchain.csv  futures_cme-long.csv  futures_cme.csv  futures_yahoo.csv  google_trends-long.csv  google_trends.csv  newdh_ret.csv  options_1_3dte.csv  options_short.csv  reddit_daily.csv  reddit_sentiment.csv  rtrs_sentiment.csv  sofr-long.csv  sofr-long.xlsx  sofr.csv  spot_yahoo-long.csv  spot_yahoo.csv
figs/: balitable.py  datasection.py  dh_investigation.py  infosets.py  portfolioing.py  triangles.py
figs/plotting/: data.R  forecasts-comparison-horizon.R  forecasts-comparison.R  futures.R  infosets.R  portfolioing.R  shappercentile.R  stdmoneyness.R
inputs/: ultra.parquet
new/: daily_integrity_modeling_panel.csv  diagnostics_filter_summary.csv  input17.parquet  mny_distribution_summary.csv  target_exposure_map.json  y_price_distribution_summary.csv  y_price_gt_10_rows.csv  y_price_gt_10_rows.parquet  yprice_outliers_before_winsor.csv
results/dh_ret/all-all/I/: config_resolved.yaml
results/dh_ret/all-all/IB/: config_resolved.yaml
spread0.8/: daily_integrity_modeling_panel.csv  diagnostics_filter_summary.csv  dickey-fuller.py  input17.parquet  mny_distribution_summary.csv  quick.py  y_price_distribution_summary.csv  yprice_outliers_before_winsor.csv
(+1353 files in other folders)
