[project]
name = "kawah-thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pyyaml>=6.0.3",p
    "scikit-learn>=1.7.2",
    "shap>=0.49.1",
    "torch>=2.9.1",
]